--- a/MemeThing/Views/MemeThing/Views/MemeThing/Views/Base.lproj/Drawing.storyboard
+++ b/MemeThing/Views/MemeThing/Views/MemeThing/Views/Base.lproj/Drawing.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,23 +23,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JNr-ca-bWi">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="b0C-Xq-aSa">
-                                        <rect key="frame" x="20.5" y="19.5" width="373" height="735"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="duD-VB-0vT">
+                                        <rect key="frame" x="0.0" y="44" width="414" height="660.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Draw something funny!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zx1-JU-3wd" customClass="MemeThingLabelBackground" customModule="MemeThing" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="373" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="cRg-mx-Epg"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <view contentMode="scaleToFill" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="7cY-5M-71c" customClass="CanvasView" customModule="MemeThing" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="47" width="373" height="621"/>
+                                                <rect key="frame" x="20.5" y="16.5" width="373" height="627.5"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="hdu-03-sxy" customClass="CircularButton" customModule="MemeThing" customModuleProvider="target">
-                                                        <rect key="frame" x="328" y="8" width="37" height="37"/>
+                                                        <rect key="frame" x="321" y="8" width="44" height="44"/>
                                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="hdu-03-sxy" secondAttribute="height" multiplier="1:1" id="fjl-H2-bAB"/>
@@ -55,30 +45,48 @@
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" secondItem="7cY-5M-71c" secondAttribute="height" multiplier="3:5" id="J2v-Zo-SCf"/>
                                                     <constraint firstAttribute="trailing" secondItem="hdu-03-sxy" secondAttribute="trailing" constant="8" id="KEm-R5-sGf"/>
                                                     <constraint firstItem="hdu-03-sxy" firstAttribute="top" secondItem="7cY-5M-71c" secondAttribute="top" constant="8" id="M1I-by-Gyk"/>
+                                                    <constraint firstItem="hdu-03-sxy" firstAttribute="height" secondItem="7cY-5M-71c" secondAttribute="height" multiplier="0.07" priority="999" id="V4F-BD-u9Y"/>
                                                 </constraints>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zL-R8-fD7" customClass="SubmitButton" customModule="MemeThing" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="685" width="373" height="50"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="8HQ-nA-F0q"/>
-                                                </constraints>
-                                                <state key="normal" title="Send"/>
-                                                <connections>
-                                                    <action selector="sendButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PCf-Nl-Lhq"/>
-                                                </connections>
-                                            </button>
                                         </subviews>
-                                    </stackView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="7cY-5M-71c" firstAttribute="width" secondItem="duD-VB-0vT" secondAttribute="width" multiplier="0.9" id="Lii-U1-O8J"/>
+                                            <constraint firstItem="7cY-5M-71c" firstAttribute="centerX" secondItem="duD-VB-0vT" secondAttribute="centerX" id="YOX-Je-n1c"/>
+                                            <constraint firstItem="7cY-5M-71c" firstAttribute="centerY" secondItem="duD-VB-0vT" secondAttribute="centerY" id="gnG-qc-Q23"/>
+                                            <constraint firstItem="7cY-5M-71c" firstAttribute="height" secondItem="duD-VB-0vT" secondAttribute="height" multiplier="0.95" id="sqW-h7-QnC"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Draw something funny!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zx1-JU-3wd" customClass="MemeThingLabelDark" customModule="MemeThing" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                        <color key="backgroundColor" name="yellowAccent"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="2cQ-vC-IcS"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zL-R8-fD7" customClass="SubmitButton" customModule="MemeThing" customModuleProvider="target">
+                                        <rect key="frame" x="20.5" y="704.5" width="373" height="57.5"/>
+                                        <state key="normal" title="Send"/>
+                                        <connections>
+                                            <action selector="sendButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PCf-Nl-Lhq"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="b0C-Xq-aSa" firstAttribute="height" secondItem="JNr-ca-bWi" secondAttribute="height" multiplier="0.95" id="5hc-Ts-shH"/>
-                                    <constraint firstItem="b0C-Xq-aSa" firstAttribute="width" secondItem="JNr-ca-bWi" secondAttribute="width" multiplier="0.9" id="cAy-hF-S3o"/>
-                                    <constraint firstItem="b0C-Xq-aSa" firstAttribute="centerY" secondItem="JNr-ca-bWi" secondAttribute="centerY" id="ofA-u0-hpn"/>
-                                    <constraint firstItem="b0C-Xq-aSa" firstAttribute="centerX" secondItem="JNr-ca-bWi" secondAttribute="centerX" id="yZM-33-OWg"/>
+                                    <constraint firstAttribute="trailing" secondItem="duD-VB-0vT" secondAttribute="trailing" id="CN9-2q-3dk"/>
+                                    <constraint firstItem="duD-VB-0vT" firstAttribute="top" secondItem="Zx1-JU-3wd" secondAttribute="bottom" id="P4L-Jg-8R9"/>
+                                    <constraint firstItem="4zL-R8-fD7" firstAttribute="top" secondItem="duD-VB-0vT" secondAttribute="bottom" id="Uqg-VI-XhL"/>
+                                    <constraint firstItem="Zx1-JU-3wd" firstAttribute="top" secondItem="JNr-ca-bWi" secondAttribute="top" id="cye-ia-Y86"/>
+                                    <constraint firstAttribute="bottom" secondItem="4zL-R8-fD7" secondAttribute="bottom" constant="12" id="g5i-nl-UW5"/>
+                                    <constraint firstAttribute="trailing" secondItem="Zx1-JU-3wd" secondAttribute="trailing" id="gtX-z5-EnN"/>
+                                    <constraint firstItem="duD-VB-0vT" firstAttribute="leading" secondItem="JNr-ca-bWi" secondAttribute="leading" id="jJj-8C-c8b"/>
+                                    <constraint firstItem="Zx1-JU-3wd" firstAttribute="leading" secondItem="JNr-ca-bWi" secondAttribute="leading" id="sq3-4i-jHW"/>
                                 </constraints>
                             </view>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UWg-1Y-3dz">
@@ -103,20 +111,20 @@
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="UWg-1Y-3dz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1ce-ez-N1u"/>
-                            <constraint firstItem="JNr-ca-bWi" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="2O4-35-5Et"/>
-                            <constraint firstItem="Zx1-JU-3wd" firstAttribute="height" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.03" priority="999" id="61E-6b-3ht"/>
-                            <constraint firstItem="i8k-Sa-Dqv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7bD-nk-aMA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UWg-1Y-3dz" secondAttribute="trailing" id="8FJ-Wj-mRe"/>
-                            <constraint firstItem="JNr-ca-bWi" firstAttribute="top" secondItem="i8k-Sa-Dqv" secondAttribute="bottom" id="HnX-7k-khs"/>
-                            <constraint firstItem="i8k-Sa-Dqv" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Ofo-iS-AP2"/>
-                            <constraint firstItem="JNr-ca-bWi" firstAttribute="top" secondItem="UWg-1Y-3dz" secondAttribute="bottom" id="U00-HR-qXI"/>
-                            <constraint firstItem="hdu-03-sxy" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.045" priority="999" id="ig5-Zj-UeE"/>
-                            <constraint firstItem="UWg-1Y-3dz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="l74-gC-lWa"/>
-                            <constraint firstItem="JNr-ca-bWi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pzT-LQ-RI5"/>
-                            <constraint firstItem="JNr-ca-bWi" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="qYq-PN-0OA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="i8k-Sa-Dqv" secondAttribute="trailing" id="qnb-dz-d3T"/>
-                            <constraint firstItem="4zL-R8-fD7" firstAttribute="height" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.06" priority="999" id="syP-T1-LZ3"/>
+                            <constraint firstItem="UWg-1Y-3dz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1Rj-YH-TxH"/>
+                            <constraint firstItem="JNr-ca-bWi" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="2PY-RE-dda"/>
+                            <constraint firstItem="JNr-ca-bWi" firstAttribute="top" secondItem="i8k-Sa-Dqv" secondAttribute="bottom" id="6y5-0t-c6n"/>
+                            <constraint firstItem="i8k-Sa-Dqv" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="96u-cZ-ogA"/>
+                            <constraint firstItem="UWg-1Y-3dz" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="CuM-wj-N6q"/>
+                            <constraint firstItem="4zL-R8-fD7" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.9" id="D4d-oh-k7O"/>
+                            <constraint firstItem="i8k-Sa-Dqv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="KPp-XW-TUY"/>
+                            <constraint firstItem="4zL-R8-fD7" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.07" id="L8k-wL-2wY"/>
+                            <constraint firstItem="4zL-R8-fD7" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Utl-he-246"/>
+                            <constraint firstItem="JNr-ca-bWi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VG7-vZ-9VD"/>
+                            <constraint firstItem="JNr-ca-bWi" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="cvA-4D-MO3"/>
+                            <constraint firstItem="UWg-1Y-3dz" firstAttribute="bottom" secondItem="i8k-Sa-Dqv" secondAttribute="bottom" id="f9x-iU-RI9"/>
+                            <constraint firstItem="i8k-Sa-Dqv" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="kE8-by-ltY"/>
+                            <constraint firstItem="UWg-1Y-3dz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rcV-L0-EMk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -135,10 +143,13 @@
         <image name="arrow.counterclockwise" catalog="system" width="115" height="128"/>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
         <namedColor name="navBar">
-            <color red="0.94901960784313721" green="0.8666666666666667" blue="0.64313725490196083" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="purpleAccent">
             <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="yellowAccent">
+            <color red="0.8666666666666667" green="0.93725490196078431" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
     </resources>
 </document>
